# TexttoSQL-Chatbot

./: .env-sample  .gitignore  airplanes-flights-pg.yml  main.py  pyproject.toml  setup_schemas.py  text2sql_pgvector.py
docker/: docker-compose.yml
